--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
   "name": "monorepo",
   "private": true,
+	"type": "module",
   "scripts": {
     "build": "turbo build",
     "dev": "turbo dev",
     "lint": "turbo lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "bump": "taze major -I -r"
   },
   "devDependencies": {
-    "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
-    "prettier": "^3.1.0",
-    "turbo": "latest"
+    "eslint": "8.56.0",
+    "prettier": "3.1.0",
+    "taze": "0.13.1",
+    "turbo": "1.11.2",
+    "typescript": "5.3.3"
   },
-  "packageManager": "pnpm@8.9.0",
+  "packageManager": "pnpm@8.14.0",
   "engines": {
     "node": ">=18"
   }
