--- a/config/eslint-config/package.json
+++ b/config/eslint-config/package.json
@@ -7,8 +7,23 @@
   "publishConfig": {
     "access": "public"
   },
+  "exports": {
+    ".": {
+      "types": "./src/index.ts",
+      "import": "./src/index.ts",
+      "node": "./src/index.ts",
+      "require": "./src/index.ts"
+    }
+  },
+  "main": "src/index.ts",
+  "module": "src/index.ts",
+  "types": "src/index.ts",
+  "files": [
+    "src"
+  ],
   "scripts": {
-    "lint": "eslint . --max-warnings 0"
+    "eslint": "eslint . --max-warnings 0",
+    "eslint:fix": "eslint --fix"
   },
   "devDependencies": {
     "@antfu/eslint-config": "2.6.1"
