--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "turbo": "1.11.2",
     "typescript": "5.3.3",
     "vitest": "1.1.1"
+  },
+  "dependencies": {
+    "consola": "^3.2.3"
   }
 }
