--- a/packages/dnd/package.json
+++ b/packages/dnd/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@teleskop-labs/css-box-model",
+  "name": "@teleskop-labs/dnd",
   "type": "module",
   "version": "0.0.0",
   "private": true,
