--- a/packages/css-box-model copy/package.json
+++ b/packages/css-box-model copy/package.json
@@ -15,6 +15,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@teleskop-labs/css-box-model": "workspace:^",
     "@teleskop-labs/utils": "workspace:*"
   }
 }
