--- a/packages/css-box-model copy/tsconfig.json
+++ b/packages/css-box-model copy/tsconfig.json
@@ -1,5 +1,5 @@
 {
   "extends": "@teleskop-labs/tsconfig/tsconfig.json",
-  "include": ["src", "eslint.config.ts"],
-  "exclude": ["node_modules", "dist", "build", "coverage", "test", "tests", "testsuite", "testsuites", "tmp", "temp", "vendor"]
+  "include": ["../dnd/src", "../dnd/eslint.config.ts"],
+  "exclude": ["../dnd/node_modules", "../dnd/dist", "../dnd/build", "../dnd/coverage", "../dnd/test", "../dnd/tests", "../dnd/testsuite", "../dnd/testsuites", "../dnd/tmp", "../dnd/temp", "../dnd/vendor"]
 }
