Update eslint configurations and dependencies

--- a/packages/dnd/package.json
+++ b/packages/dnd/package.json
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "@teleskop-labs/css-box-model": "workspace:^",
+    "@teleskop-labs/memoize-one": "workspace:^",
+    "@teleskop-labs/tiny-invariant": "workspace:^",
     "@teleskop-labs/utils": "workspace:*"
   }
 }
