--- a/package.json
+++ b/package.json
@@ -24,18 +24,18 @@
     "@types/fs-extra": "^11.0.4",
     "@types/jsdom": "^21.1.6",
     "@types/node": "20.10.6",
+    "consola": "^3.2.3",
     "eslint": "npm:eslint-ts-patch@8.56.0-0",
     "eslint-ts-patch": "8.56.0-0",
+    "expect-type": "^0.17.3",
     "fs-extra": "^11.2.0",
     "jsdom": "^23.2.0",
     "npm-run-all2": "6.1.1",
     "prettier": "3.1.0",
     "taze": "0.13.1",
     "turbo": "1.11.2",
+    "type-fest": "^4.10.1",
     "typescript": "5.3.3",
     "vitest": "1.1.1"
-  },
-  "dependencies": {
-    "consola": "^3.2.3"
   }
 }
