--- a/packages/memoize-one/tsconfig.node.json
+++ b/packages/memoize-one/tsconfig.node.json
@@ -1,14 +1,10 @@
 {
   "extends": "@teleskop-labs/tsconfig/tsconfig.json",
   "compilerOptions": {
-    "composite": true,
-    "module": "ESNext",
-    "moduleResolution": "Bundler",
-    "types": ["node"],
-    "noEmit": true
+    "composite": true
   },
   "include": [
-    "vitest.config.*",
-    "eslint.config.*"
+    "vitest.config.ts",
+    "eslint.config.ts"
   ]
 }
