--- a/packages/tabbable/tsconfig.eslint.json
+++ b/packages/tabbable/tsconfig.eslint.json
@@ -2,10 +2,7 @@
   "extends": "@teleskop-labs/tsconfig/tsconfig.json",
   "compilerOptions": {
     "composite": true,
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["src/*"]
-    }
+    "baseUrl": "."
   },
   "include": [
     "env.d.ts",
