--- a/packages/tabbable/tsconfig.node.json
+++ b/packages/tabbable/tsconfig.node.json
@@ -1,11 +1,7 @@
 {
   "extends": "@teleskop-labs/tsconfig/tsconfig.json",
   "compilerOptions": {
-    "composite": true,
-    "module": "ESNext",
-    "moduleResolution": "Bundler",
-    "types": ["node"],
-    "noEmit": true
+    "composite": true
   },
   "include": [
     "vite.config.*",
